#67 info sign for visualize progress button is showing again

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -857,7 +857,7 @@
                 </label> \
                 <span class="select-bar"></span> \
             </div> \
-            <button class="button" id="visualize_progress_button" onclick="show_progress_dialog(' + num_input + ')" style="margin-right: 1%"></button> \
+            <button class="button" id="visualize_progress_button" onclick="show_progress_dialog(' + num_input + ')" style="margin-right: 1%"><i class="fas fa-info-circle"></i></button> \
             <button class="button" id="delete_button" onclick="delete_and_reoder(' + num_input + ')" style="margin-right: 1%"><i class="fas fa-trash"></i></button> \
         </div>';
 
